--- a/tomato-framework/tomato-framework-demo/src/main/resources/application.properties
+++ b/tomato-framework/tomato-framework-demo/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-jdbc.dataSourceClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://192.168.21.28:4433;database=hj_dict_new;integratedSecurity=false
-jdbc.username=D_coder
-jdbc.password=qwer!@#$
+jdbc.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=
+
+mango.scanner.packages=com.tomato.framework.*.dao
+
+httpclent.socketTimeout=10000
+httpclent.connectTimeout=10000
+httpclent.connectionRequestTimeout=10000
