添加plugin模块，以及demo添加dao依赖，注意，需要本地启动数据库服务

--- a/tomato-framework-demo/pom.xml
+++ b/tomato-framework-demo/pom.xml
@@ -18,14 +18,22 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<tomato-framework.version>0.0.1-SNAPSHOT</tomato-framework.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.tomato.framework</groupId>
 			<artifactId>tomato-framework-rest</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${tomato-framework.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.tomato.framework</groupId>
+			<artifactId>tomato-framework-dao</artifactId>
+			<version>${tomato-framework.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
