升级mango框架到1.5.1最新版本，demo添加curd

--- a/tomato-framework-demo/src/main/resources/application.properties
+++ b/tomato-framework-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/tomato_framework?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=
 
