--- a/tomato-framework-dao/pom.xml
+++ b/tomato-framework-dao/pom.xml
@@ -17,7 +17,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<mango.version>1.5.1</mango.version>
-        <tomato-framework.version>0.0.1-SNAPSHOT</tomato-framework.version>
+        <hikaricp.version>2.6.1</hikaricp.version>
+		<tomato-framework.version>0.0.1-SNAPSHOT</tomato-framework.version>
 	</properties>
 
 	<dependencies>
@@ -30,6 +31,7 @@
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
+			<version>${hikaricp.version}</version>
 		</dependency>
 		
 		<!-- orm -->
