--- a/tomato-framework-demo/pom.xml
+++ b/tomato-framework-demo/pom.xml
@@ -34,6 +34,12 @@
 			<version>${tomato-framework.version}</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.tomato.framework</groupId>
+            <artifactId>tomato-framework-test</artifactId>
+            <version>${tomato-framework.version}</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
