--- a/tomato-framework-demo/src/main/resources/application.properties
+++ b/tomato-framework-demo/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-jdbc.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-jdbc.url=jdbc:mysql://127.0.0.1:3306/tomato_framework?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=
+jdbc.names=master_tomato_framework,slave_tomato_framework_1
+jdbc.master_tomato_framework.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+jdbc.master_tomato_framework.url=jdbc:mysql://127.0.0.1:3306/tomato_framework?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.master_tomato_framework.username=root
+jdbc.master_tomato_framework.password=
+
+jdbc.slave_tomato_framework_1.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+jdbc.slave_tomato_framework_1.url=jdbc:mysql://127.0.0.1:3306/tomato_framework?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.slave_tomato_framework_1.username=root
+jdbc.slave_tomato_framework_1.password=
 
 mango.scanner.packages=com.tomato.framework.*.dao
 
