--- a/tomato-framework-plugin/tomato-framework-plugin-pagehelper/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-pagehelper/pom.xml
@@ -5,18 +5,17 @@
 
 	<parent>
 		<groupId>com.tomato.framework</groupId>
-		<artifactId>tomato-framework</artifactId>
+		<artifactId>tomato-framework-plugin</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>tomato-framework-dao</artifactId>
+	<artifactId>tomato-framework-plugin-pagehelper</artifactId>
 	<packaging>jar</packaging>
-	<name>tomato-framework-dao</name>
+	<name>tomato-framework-plugin-pagehelper</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<mango.version>1.5.1</mango.version>
 		<tomato-framework.version>0.0.1-SNAPSHOT</tomato-framework.version>
 	</properties>
 
@@ -25,29 +24,6 @@
 			<groupId>com.tomato.framework</groupId>
 			<artifactId>tomato-framework-core</artifactId>
 			<version>${tomato-framework.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.tomato.framework</groupId>
-			<artifactId>tomato-framework-plugin-pagehelper</artifactId>
-			<version>${tomato-framework.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-		</dependency>
-		
-		<!-- orm -->
-		<dependency>
-			<groupId>org.jfaster</groupId>
-			<artifactId>mango</artifactId>
-			<version>${mango.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
     </dependencies>
 
