添加缓存支持，默认采用spring-redis

--- a/tomato-framework-demo/pom.xml
+++ b/tomato-framework-demo/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tomato-framework.version>0.0.1-SNAPSHOT</tomato-framework.version>
+		<tomato-framework-plugin.version>0.0.1-SNAPSHOT</tomato-framework-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -34,12 +35,23 @@
 			<version>${tomato-framework.version}</version>
 		</dependency>
 
-        <dependency>
+		<dependency>
             <groupId>com.tomato.framework</groupId>
             <artifactId>tomato-framework-test</artifactId>
             <version>${tomato-framework.version}</version>
         </dependency>
 
+		<dependency>
+			<groupId>com.tomato.framework</groupId>
+			<artifactId>tomato-framework-plugin-cache</artifactId>
+			<version>${tomato-framework-plugin.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.tomato.framework</groupId>
+			<artifactId>tomato-framework-plugin-pagehelper</artifactId>
+			<version>${tomato-framework-plugin.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
