--- a/tomato-framework-demo/src/main/resources/application.properties
+++ b/tomato-framework-demo/src/main/resources/application.properties
@@ -11,6 +11,16 @@ jdbc.slave_tomato_framework_1.password=
 
 mango.scanner.packages=com.tomato.framework.*.dao
 
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.password=
+spring.redis.port=6379
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=0
+
 httpclent.socketTimeout=10000
 httpclent.connectTimeout=10000
 httpclent.connectionRequestTimeout=10000
