--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
     <modules>
         <module>tomato-framework-core</module>
         <module>tomato-framework-dao</module>
-        <module>tomato-framework-demo</module>
+        <module>tomato-framework-demo-client</module>
+        <module>tomato-framework-demo-provider</module>
+        <module>tomato-framework-demo-service</module>
         <module>tomato-framework-rest</module>
         <module>tomato-framework-plugin</module>
         <module>tomato-framework-test</module>
@@ -35,11 +37,11 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>http://repository-master.mulesoft.org/nexus/content/groups/public</url>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://repository-master.mulesoft.org/nexus/content/repositories/snapshots</url>
+            <url>http://maven.aliyun.com/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
     <dependencies>
