--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tomato.framework</groupId>
     <artifactId>tomato-framework</artifactId>
+    <groupId>com.tomato.framework</groupId>
     <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>tomato-framework</name>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
     </parent>
 
     <modules>
@@ -26,9 +26,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <google.version>21.0</google.version>
-        <lombok.version>1.16.14</lombok.version>
-        <fastjson.version>1.2.29</fastjson.version>
+        <guava.version>27.1-jre</guava.version>
+        <lombok.version>1.18.6</lombok.version>
+        <fastjson.version>1.2.57</fastjson.version>
     </properties>
 
     <distributionManagement>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${google.version}</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
