添加mybatis和druid数据源

--- a/tomato-framework-test/pom.xml
+++ b/tomato-framework-test/pom.xml
@@ -28,6 +28,12 @@
 
 		<dependency>
 			<groupId>com.tomato.framework</groupId>
+			<artifactId>tomato-framework-rest</artifactId>
+			<version>${tomato-framework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.tomato.framework</groupId>
 			<artifactId>tomato-framework-plugin-cache</artifactId>
 			<version>${tomato-framework-plugin.version}</version>
 		</dependency>
