--- a/tomato-framework-dao/pom.xml
+++ b/tomato-framework-dao/pom.xml
@@ -33,16 +33,18 @@
 			<version>${tomato-framework.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-		</dependency>
-
 		<!-- orm -->
 		<dependency>
-			<groupId>org.jfaster</groupId>
-			<artifactId>mango</artifactId>
-			<version>${mango.version}</version>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+		<!-- datasource -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.16</version>
 		</dependency>
 
 		<dependency>
