添加MQTT协议支持

--- a/tomato-framework-plugin/pom.xml
+++ b/tomato-framework-plugin/pom.xml
@@ -23,5 +23,6 @@
 		<module>tomato-framework-plugin-ui</module>
 		<module>tomato-framework-plugin-rpc</module>
 		<module>tomato-framework-plugin-websocket</module>
-	</modules>
+        <module>tomato-framework-plugin-mqtt</module>
+    </modules>
 </project>
