--- a/tomato-framework-plugin/tomato-framework-plugin-mqtt/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-mqtt/pom.xml
@@ -16,6 +16,10 @@
       <groupId>org.springframework.integration</groupId>
       <artifactId>spring-integration-mqtt</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.tomato.framework</groupId>
+      <artifactId>tomato-framework-core</artifactId>
+    </dependency>
 
   </dependencies>
 </project>
