支持zk注册中心

--- a/tomato-framework-plugin/tomato-framework-plugin-rmi/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-rmi/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>tomato-framework-core</artifactId>
 			<version>${tomato-framework.version}</version>
 		</dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+
+	</dependencies>
 
 </project>
