手写mybatis-添加其他数据源连接池

--- a/tomato-framework-plugin/tomato-framework-plugin-mybatis/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-mybatis/pom.xml
@@ -33,6 +33,13 @@
       <version>1.4</version>
     </dependency>
 
+    <!-- HikariCP连接池依赖 -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.3.1</version>
+    </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
