--- a/tomato-framework-plugin/tomato-framework-plugin-mybatis/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-mybatis/pom.xml
@@ -31,6 +31,7 @@
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.4</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- HikariCP连接池依赖 -->
@@ -38,6 +39,7 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>3.3.1</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
