手写spring-mvc-添加相关servlet依赖

--- a/tomato-framework-plugin/pom.xml
+++ b/tomato-framework-plugin/pom.xml
@@ -26,5 +26,6 @@
         <module>tomato-framework-plugin-mqtt</module>
       <module>tomato-framework-plugin-mybatis</module>
       <module>tomato-framework-plugin-ioc</module>
+      <module>tomato-framework-plugin-mvc</module>
     </modules>
 </project>
