--- a/tomato-framework-plugin/tomato-framework-plugin-mvc/pom.xml
+++ b/tomato-framework-plugin/tomato-framework-plugin-mvc/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>tomato-framework-plugin-mvc</artifactId>
-
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
